# 2025-tactile-whisking

./: LICENSE  README.md
neural-data/: .gitignore  README.md  pyproject.toml
neural-data/data/: all_test_results.json  model_input_rsa.npz  model_total_params.json  model_total_params_mapped.json  note.txt
neural-data/src/dataset/: check_params.py  performance_data.py  rodgers_data.py
neural-data/src/fit/: animal_to_animal_consistency.py  animal_to_animal_rsa.py  input_to_animal_rsa.py  model_to_animal_consistency.py
neural-data/src/plot/: hires_theta_plots.py  plot_augmentations.py  plot_compare_linregress_median.py  plot_compare_model_neural_eval.py  plot_linregress_results.py  plot_model_ryysb_rxynsb.py  plot_rdm.py  plot_ryysb_rxynsb.py  plot_ssl_best_task_acc_model.py  plot_svm.py
neural-data/src/utils/: linregress_utils.py  model_eval.py  nwb_utils.py  plotting.py
neural-data/test/: test_rodgers_data.py
tactile-nn/: .gitignore  README.md  pyproject.toml
tactile-nn/tactile_model/: datamodule.py  environment.yml  get_nn_activation.py  main.py  model.py  run_S4_GPT_shapenet.sh  run_S4_GPT_ssl_shapenet.sh  run_S4_Mamba_shapenet.sh  run_S4_Mamba_ssl_shapenet.sh  run_Zhuang_GPT_shapenet.sh  run_Zhuang_GPT_ssl_shapenet.sh  run_Zhuang_Mamba_shapenet.sh  run_Zhuang_Mamba_ssl_shapenet.sh  run_Zhuang_shapenet.sh  run_Zhuang_ssl_shapenet.sh  run_baku_shapenet.sh  run_baku_ssl_shapenet.sh  run_nn_activation.sh  run_pt_resnet18_Mamba_shapenet.sh  run_pt_resnet18_Mamba_ssl_shapenet.sh  run_pt_resnet18_shapenet.sh  sbatch_svm.sh  svm.py  tactile_dataset.py
(+109 files in other folders)
