[tool.poetry]
name = "neural_data"
version = "0.1.0"
description = ""
authors = ["Trinity Chung <trinityc@cmu.edu>"]
readme = "README.md"
packages = [
    { include = "fit", from = "src" },
    { include = "utils", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"
pynwb = "^2.8.2"
dandi = "^0.63.1"
brainmodel_utils = { path = "brainmodel_utils", develop = true }
numpy = "^2.2.2"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
jupyter = "^1.1.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
