[tool.poetry]
name = "tactile_model"
version = "0.1.0"
description = ""
authors = ["Trinity Chung <trinityc@cmu.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
pt_tnn = { path = "PyTorchTNN", develop = true }
python = "^3.12"
lightning = "^2.4.0"
numpy = "^2.1.1"
pandas = "^2.2.3"
hydra-core = "^1.3.2"
einops = "^0.8.1"
scipy = "^1.15.2"
mamba-ssm = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
